# pydantic-ai-test

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  skills-lock.json
.zed/: settings.json
scripts/: 01_simple.py  02_structured_output.py  03_tool.py  04_dependency.py  code_analyzer.py
